plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.github.vadimmiheev.vectordocs.documentprocessor'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.apache.pdfbox:pdfbox:3.0.5'
    // OCR (Tesseract via Tess4J)
    implementation 'net.sourceforge.tess4j:tess4j:5.10.0'

    // LangChain4j (OpenAI-compatible for Ollama)
    implementation 'dev.langchain4j:langchain4j-open-ai:0.34.0'

    // vector hibernate support
    implementation 'org.hibernate.orm:hibernate-vector:6.4.0.Final'

    // Lombok for boilerplate reduction
    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'
    testCompileOnly 'org.projectlombok:lombok:1.18.38'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'

    runtimeOnly 'org.postgresql:postgresql:42.7.4'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

bootJar {
    archiveFileName = "${project.name}.jar"
}
